--- a/Themes/Yaru-Grey-dark/gnome-shell/gnome-shell.css
+++ b/Themes/Yaru-Grey-dark/gnome-shell/gnome-shell.css
@@ -1139,7 +1139,7 @@ StScrollBar {
 
 /* Top Bar */
 #panel {
-  background-color: #1d1d1d;
+  background-color: #000000;
   font-weight: bold;
   height: 1.86em;
   font-feature-settings: "tnum"; }
@@ -2216,7 +2216,7 @@ StScrollBar {
   border: none !important; }
 
 #dashtodockContainer.shrink.left #dash, #dashtodockContainer.dashtodock.left #dash, #dashtodockContainer.shrink.right #dash, #dashtodockContainer.dashtodock.right #dash {
-  background: #1d1d1d;
+  background: #000000;
   padding-top: 2px;
   padding-bottom: 2px; }
 
